--- a/1001_Site_Renewal/리뉴얼/index.html
+++ b/1001_Site_Renewal/리뉴얼/index.html
@@ -5,49 +5,49 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <meta http-equiv="X-UA-Compatible" content="ie=edge" />
         <title>한국관광공사</title>
-        <link rel="stylesheet" href="../css/index.css" />
-        <link rel="icon" href="../img/favicon.png" type="icon" />
+        <link rel="stylesheet" href="css/index.css" />
+        <link rel="icon" href="img/favicon.png" type="icon" />
         <script src="https://kit.fontawesome.com/60a06f6dc3.js" crossorigin="anonymous"></script>
     </head>
     <body>
         <header>
             <div class="header_box">
-                <a href="index.html"><img src="../img/logo.png" alt="한국관광공사"/></a>
+                <a href="index.html"><img src="img/logo.png" alt="한국관광공사"/></a>
                 <nav>
                     <ul class="header_1depth">
                         <li>
-                            <a href="sub_01.html">정보공개</a>
+                            <a href="sub01_1.html">정보공개</a>
                             <ul>
-                                <li><a href="sub_01.html">정보공개창구</a></li>
-                                <li><a href="sub_01.html">공공데이터개방</a></li>
-                                <li><a href="sub_01.html">부채내용</a></li>
+                                <li><a href="sub01_1.html">정보공개창구</a></li>
+                                <li><a href="sub01_1.html">공공데이터개방</a></li>
+                                <li><a href="sub01_1.html">부채내용</a></li>
                             </ul>
                         </li>
                         <li>
-                            <a href="sub_02.html">국민참여</a>
+                            <a href="sub02_1.html">국민참여</a>
                             <ul>
-                                <li><a href="sub_02.html">문의하기</a></li>
+                                <li><a href="sub02_1.html">문의하기</a></li>
                             </ul>
                         </li>
                         <li>
-                            <a href="sub_03.html">사업</a>
+                            <a href="sub03_1.html">사업</a>
                             <ul>
-                                <li><a href="sub_03.html">사업지원</a></li>
+                                <li><a href="sub03_1.html">사업지원</a></li>
                             </ul>
                         </li>
                         <li>
-                            <a href="sub_04_01.html">알림</a>
+                            <a href="sub04_1.html">알림</a>
                             <ul>
-                                <li><a href="sub_04_01.html">관광시장정보</a></li>
-                                <li><a href="sub_04_02.html">새소식</a></li>
-                                <li><a href="sub_04_03.html">갤러리</a></li>
+                                <li><a href="sub04_1.html">관광시장정보</a></li>
+                                <li><a href="sub04_2.html">새소식</a></li>
+                                <li><a href="sub04_3.html">갤러리</a></li>
                             </ul>
                         </li>
                         <li>
-                            <a href="sub_05_01.html">공사</a>
+                            <a href="sub05_1.html">공사</a>
                             <ul>
-                                <li><a href="sub_05_01.html">조직안내</a></li>
-                                <li><a href="sub_05_02.html">시설안내</a></li>
+                                <li><a href="sub05_1.html">조직안내</a></li>
+                                <li><a href="sub05_2.html">시설안내</a></li>
                             </ul>
                         </li>
                     </ul>
@@ -57,7 +57,7 @@
                     <a href="login.html">회원가입</a>
                     <form action="#">
                         <input type="text" />
-                        <a href="#"><img src="../img/icon_search.png" alt="search"/></a>
+                        <a href="#"><img src="img/icon_search.png" alt="search"/></a>
                     </form>
                 </div>
             </div>
@@ -65,9 +65,9 @@
         <div class="content">
             <div class="visual" id="visual">
                 <div class="img">
-                    <img src="../img/img_visual01.jpg" alt="" />
-                    <img src="../img/img_visual02.jpg" alt="" />
-                    <img src="../img/img_visual03.jpg" alt="" />
+                    <img src="img/img_visual01.jpg" alt="" />
+                    <img src="img/img_visual02.jpg" alt="" />
+                    <img src="img/img_visual03.jpg" alt="" />
                 </div>
                 <p>
                     관광을 <span>미래</span> 성장동력으로,<br />
@@ -82,32 +82,32 @@
                 <div class="button">
                     <ul>
                         <li>
-                            <a href="sub_04_02.html">
-                                <img src="../img/icon_button_01.png" alt="" />
+                            <a href="sub04_2.html">
+                                <img src="img/icon_button_01.png" alt="" />
                                 <p>새소식</p>
                             </a>
                         </li>
                         <li>
-                            <a href="sub_01.html">
-                                <img src="../img/icon_button_02.png" alt="" />
+                            <a href="sub01_1.html">
+                                <img src="img/icon_button_02.png" alt="" />
                                 <p>정보공개창구</p>
                             </a>
                         </li>
                         <li>
-                            <a href="sub_04_03.html">
-                                <img src="../img/icon_button_03.png" alt="" />
+                            <a href="sub04_3.html">
+                                <img src="img/icon_button_03.png" alt="" />
                                 <p>갤러리</p>
                             </a>
                         </li>
                         <li>
-                            <a href="sub_03.html">
-                                <img src="../img/icon_button_04.png" alt="" />
+                            <a href="sub03_1.html">
+                                <img src="img/icon_button_04.png" alt="" />
                                 <p>사업지원</p>
                             </a>
                         </li>
                         <li>
-                            <a href="sub_02.html">
-                                <img src="../img/icon_button_05.png" alt="" />
+                            <a href="sub02_1.html">
+                                <img src="img/icon_button_05.png" alt="" />
                                 <p>국민참여</p>
                             </a>
                         </li>
@@ -118,36 +118,36 @@
                         <li>
                             <div class="top">
                                 <h2>알림마당</h2>
-                                <a href="sub_04_01.html"><img src="../img/icon_plus.png" alt=""/></a>
+                                <a href="sub04_1.html"><img src="img/icon_plus.png" alt=""/></a>
                             </div>
                             <span></span>
                             <ul>
                                 <li>
-                                    <a href="sub_04_01.html">
+                                    <a href="sub04_1.html">
                                         <p>· 2020년도 영월군 단체관광 인센티브 지원계획 알림</p>
                                         <p>2020.02.05</p>
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="sub_04_01.html">
+                                    <a href="sub04_1.html">
                                         <p>· VisitKorea 홈페이지 개인정보처리방침 개정</p>
                                         <p>2020.02.04</p>
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="sub_04_01.html">
+                                    <a href="sub04_1.html">
                                         <p>· 2020년 부산시 영도구 단체관광객 유치여행사 인센티브 지원계획 알림</p>
                                         <p>2020.02.03</p>
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="sub_04_01.html">
+                                    <a href="sub04_1.html">
                                         <p>· 2020년 장흥군 단체관광객 유치 여행사 등 인센티브 지원계획 알림</p>
                                         <p>2020.02.03</p>
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="sub_04_01.html">
+                                    <a href="sub04_1.html">
                                         <p>· 2020년 부안군 국내외 단체관광객 유치 인센티브 지원계획 알림</p>
                                         <p>2020.01.31</p>
                                     </a>
@@ -158,36 +158,36 @@
                         <li>
                             <div class="top">
                                 <h2>관광시장정보</h2>
-                                <a href="sub_04_01.html"><img src="../img/icon_plus.png" alt=""/></a>
+                                <a href="sub04_1.html"><img src="img/icon_plus.png" alt=""/></a>
                             </div>
                             <span></span>
                             <ul>
                                 <li>
-                                    <a href="sub_04_01.html">
+                                    <a href="sub04_1.html">
                                         <p>· (캐나다) 2020 캐나다 여행 트렌드 조사 결과 발표</p>
                                         <p>2020.02.04</p>
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="sub_04_01.html">
+                                    <a href="sub04_1.html">
                                         <p>· (베트남) 고급 관광 수요 급성장으로 인한 고급 호텔 증가</p>
                                         <p>2020.02.04</p>
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="sub_04_01.html">
+                                    <a href="sub04_1.html">
                                         <p>· 일본정부관광국, 2019년 방일 외래객 소비동향조사 결과 발표</p>
                                         <p>2020.02.04</p>
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="sub_04_01.html">
+                                    <a href="sub04_1.html">
                                         <p>· (홍콩) 홍콩국제공항 이용객 수 2009년 이래 최저치 기록</p>
                                         <p>2020.02.04</p>
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="sub_04_01.html">
+                                    <a href="sub04_1.html">
                                         <p>· (영국) 스코틀랜드 관광공사의 사회 취약계층 휴가 지원 프로그램</p>
                                         <p>2020.02.04</p>
                                     </a>
@@ -202,7 +202,7 @@
                 <span></span>
                 <div class="photo_box">
                     <div class="photo_left">
-                        <img src="../img/img_content01.jpg" alt="" />
+                        <img src="img/img_content01.jpg" alt="" />
                         <div class="photo_bottom">
                             <p>여왕의 길을 걷다</p>
                             <span></span>
@@ -216,17 +216,17 @@
                     <div class="photo_right">
                         <div class="photo_top">
                             <div class="img_box">
-                                <img src="../img/img_content02.jpg" alt="" />
+                                <img src="img/img_content02.jpg" alt="" />
                                 <p>한국관광 인지도·선호도 5년 연속 상승</p>
                             </div>
                             <div class="img_box">
-                                <img src="../img/img_content03.jpg" alt="" />
+                                <img src="img/img_content03.jpg" alt="" />
                                 <p>세상의 모든 초록이 피어나는 봄날의 금강</p>
                             </div>
                         </div>
                         <div class="photo_bottom">
                             <div class="img_box">
-                                <img src="../img/img_content04.jpg" alt="" />
+                                <img src="img/img_content04.jpg" alt="" />
                                 <p>DMZ 피스트레인 뮤직페스티벌</p>
                             </div>
                             <div class="text_box">
@@ -241,7 +241,7 @@
                                 </p>
                             </div>
                             <div class="img_box">
-                                <img src="../img/img_content05.jpg" alt="" />
+                                <img src="img/img_content05.jpg" alt="" />
                                 <p>30년이 지나도 ‘맛이라면 으뜸’</p>
                             </div>
                         </div>
@@ -257,7 +257,7 @@
                     </div>
                     <div class="inf_hover">
                         <p>여행지 추천</p>
-                        <p><img src="../img/icon_bottom_01.png" alt="" /></p>
+                        <p><img src="img/icon_bottom_01.png" alt="" /></p>
                     </div>
                 </a>
                 <a href="https://korean.visitkorea.or.kr/main/cs_main.do" target="_blank" class="inf_box">
@@ -268,7 +268,7 @@
                     </div>
                     <div class="inf_hover">
                         <p>여행 코스</p>
-                        <p><img src="../img/icon_bottom_02.png" alt="" /></p>
+                        <p><img src="img/icon_bottom_02.png" alt="" /></p>
                     </div>
                 </a>
                 <a href="https://korean.visitkorea.or.kr/main/fes_main.do" target="_blank" class="inf_box">
@@ -279,7 +279,7 @@
                     </div>
                     <div class="inf_hover">
                         <p>축제 정보</p>
-                        <p><img src="../img/icon_bottom_03.png" alt="" /></p>
+                        <p><img src="img/icon_bottom_03.png" alt="" /></p>
                     </div>
                 </a>
                 <a href="https://korean.visitkorea.or.kr/main/event_main.do" target="_blank" class="inf_box">
@@ -290,7 +290,7 @@
                     </div>
                     <div class="inf_hover">
                         <p>이벤트</p>
-                        <p><img src="../img/icon_bottom_04.png" alt="" /></p>
+                        <p><img src="img/icon_bottom_04.png" alt="" /></p>
                     </div>
                 </a>
             </div>
@@ -312,7 +312,7 @@
                     <div class="foo_right">
                         <a href="#">
                             <p>관련사이트</p>
-                            <img src="../img/icon_plus_white.png" />
+                            <img src="img/icon_plus_white.png" />
                         </a>
                         <ul>
                             <li><a href="https://korean.visitkorea.or.kr/main/main.do" target="_blank">대한민국구석구석</a></li>
@@ -327,7 +327,7 @@
             </div>
             <div class="bottom">
                 <div class="bot_content">
-                    <img src="../img/img_bottom_logo.png" alt="" />
+                    <img src="img/img_bottom_logo.png" alt="" />
                     <div class="bot_text">
                         <p>26464 강원도 원주시 세계로 10 TEL : (033)738-3000 사업자등록번호 : 202-81-50707</p>
                         <p>통신판매업신고 : 제 2009-서울중구-1234호</p>
@@ -337,7 +337,7 @@
             </div>
         </footer>
         <aside>
-            <a href="#visual"><img src="../img/icon_top.png" alt=""/></a>
+            <a href="#visual"><img src="img/icon_top.png" alt=""/></a>
         </aside>
     </body>
 </html>
