--- a/1001_Site_Renewal/리뉴얼/sub05_1.html
+++ b/1001_Site_Renewal/리뉴얼/sub05_1.html
@@ -2,51 +2,50 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8" />
-        <title>한국관광공사 &vert; 공사</title>
-        <link rel="stylesheet" href="../css/sub_05_01.css" />
-        <link rel="icon" href="../img/favicon.png" type="icon" />
+        <title>Document</title>
+        <link href="css/sub05_1.css" rel="stylesheet" />
         <script src="https://kit.fontawesome.com/71dbb0a759.js" crossorigin="anonymous"></script>
     </head>
 
     <body>
         <header>
             <div class="header_box">
-                <a href="index.html"><img src="../img/logo.png" alt="한국관광공사"/></a>
+                <a href="index.html"><img src="img/logo.png" alt="한국관광공사"/></a>
                 <nav>
                     <ul class="header_1depth">
                         <li>
-                            <a href="sub_01.html">정보공개</a>
+                            <a href="sub01_1.html">정보공개</a>
                             <ul>
-                                <li><a href="sub_01.html">정보공개창구</a></li>
-                                <li><a href="sub_01.html">공공데이터개방</a></li>
-                                <li><a href="sub_01.html">부채내용</a></li>
+                                <li><a href="sub01_1.html">정보공개창구</a></li>
+                                <li><a href="sub01_1.html">공공데이터개방</a></li>
+                                <li><a href="sub01_1.html">부채내용</a></li>
                             </ul>
                         </li>
                         <li>
-                            <a href="sub_02.html">국민참여</a>
+                            <a href="sub02_1.html">국민참여</a>
                             <ul>
-                                <li><a href="sub_02.html">문의하기</a></li>
+                                <li><a href="sub02_1.html">문의하기</a></li>
                             </ul>
                         </li>
                         <li>
-                            <a href="sub_03.html">사업</a>
+                            <a href="sub03_1.html">사업</a>
                             <ul>
-                                <li><a href="sub_03.html">사업지원</a></li>
+                                <li><a href="sub03_1.html">사업지원</a></li>
                             </ul>
                         </li>
                         <li>
-                            <a href="sub_04_01.html">알림</a>
+                            <a href="sub04_1.html">알림</a>
                             <ul>
-                                <li><a href="sub_04_01.html">관광시장정보</a></li>
-                                <li><a href="sub_04_02.html">새소식</a></li>
-                                <li><a href="sub_04_03.html">갤러리</a></li>
+                                <li><a href="sub04_1.html">관광시장정보</a></li>
+                                <li><a href="sub04_2.html">새소식</a></li>
+                                <li><a href="sub04_3.html">갤러리</a></li>
                             </ul>
                         </li>
                         <li>
-                            <a href="sub_05_01.html">공사</a>
+                            <a href="sub05_1.html">공사</a>
                             <ul>
-                                <li><a href="sub_05_01.html">조직안내</a></li>
-                                <li><a href="sub_05_02.html">시설안내</a></li>
+                                <li><a href="sub05_1.html">조직안내</a></li>
+                                <li><a href="sub05_2.html">시설안내</a></li>
                             </ul>
                         </li>
                     </ul>
@@ -56,7 +55,7 @@
                     <a href="login.html">회원가입</a>
                     <form action="#">
                         <input type="text" />
-                        <a href="#"><img src="../img/icon_search.png" alt="search"/></a>
+                        <a href="#"><img src="img/icon_search.png" alt="search"/></a>
                     </form>
                 </div>
             </div>
@@ -115,43 +114,41 @@
             </div>
         </section>
         <footer>
-            <div class="foo_top">
-                <div class="foo_all">
-                    <div class="foo_left">
-                        <ul>
-                            <li><a href="#">개인정보처리방침</a></li>
-                            <li><a href="#">저작권정책</a></li>
-                            <li><a href="#">고객서비스현장</a></li>
-                            <li><a href="#">전자우편 무단수집거부</a></li>
-                            <li><a href="#">HELP DESK</a></li>
-                            <li><a href="#">고객의소리</a></li>
-                            <li><a href="#">홈페이지불편신고</a></li>
-                        </ul>
-                    </div>
-                    <div class="foo_right">
-                        <a href="#">
-                            <p>관련사이트</p>
-                            <img src="../img/icon_plus_white.png" />
-                        </a>
-                        <ul>
-                            <li><a href="https://korean.visitkorea.or.kr/main/main.do" target="_blank">대한민국구석구석</a></li>
-                            <li><a href="http://k-mice.visitkorea.or.kr/main.kto?func_name=mainStart" target="_blank">K-MICE</a></li>
-                            <li><a href="http://www.durunubi.kr/" target="_blank">걷기 여행길</a></li>
-                            <li><a href="https://www.gocamping.or.kr/" target="_blank">Go Camping</a></li>
-                            <li><a href="http://cruise.visitkorea.or.kr/" target="_blank">한국 크루즈 관광 </a></li>
-                            <li><a href="http://kto.visitkorea.or.kr/kor/gov30/tourapi.kto" target="_blank">TourAPI 3.0</a></li>
-                        </ul>
+            <div class="foot01">
+                <div class="flexbox">
+                    <ul class="clearfix">
+                        <li><a href="">개인정보처리방침</a></li>
+                        <li><a href="">저작권정책</a></li>
+                        <li><a href="">고객서비스현장</a></li>
+                        <li><a href="">전자우편무단수집거부</a></li>
+                        <li><a href="">헬프데스크</a></li>
+                        <li><a href="">고객의소리</a></li>
+                        <li><a href="">홈페이지불편신고</a></li>
+                    </ul>
+                    <div class="dropdown">
+                        <a href=""
+                            >관련사이트 바로가기<em><i class="fas fa-chevron-up"></i></em
+                        ></a>
+                        <div class="pop">
+                            <a href="">대한민국구석구석</a>
+                            <a href="">K-MICE</a>
+                            <a href="">걷기여행길</a>
+                            <a href="">Go Camping</a>
+                            <a href="">한국 크루즈 관광</a>
+                            <a href="">Tour API 3.0</a>
+                            <a href=""
+                                >관련사이트 바로가기<em><i class="fas fa-times"></i></em
+                            ></a>
+                        </div>
                     </div>
                 </div>
             </div>
-            <div class="bottom">
-                <div class="bot_content">
-                    <img src="../img/img_bottom_logo.png" alt="" />
-                    <div class="bot_text">
-                        <p>26464 강원도 원주시 세계로 10 TEL : (033)738-3000 사업자등록번호 : 202-81-50707</p>
-                        <p>통신판매업신고 : 제 2009-서울중구-1234호</p>
-                        <p>Copyright © 2007-2012 by KTO. ALL RIGHT RESERVED.</p>
-                    </div>
+            <div class="foot02">
+                <div class="flexbox">
+                    <p>
+                        우) 26464 강원도 원주시 세계로 10 TEL : (033)738-3000 사업자등록번호 : 202-81-50707 통신판매업신고 : 제 2009-서울중구-1234호
+                    </p>
+                    <p>Copyright &copy; 2007-2012 by KTO. ALL RIGHT RESERVED.</p>
                 </div>
             </div>
         </footer>
