--- a/011_javascript/while7.html
+++ b/011_javascript/while7.html
@@ -7,7 +7,7 @@
     </head>
     <body>
         <script>
-            document.write("<h1>홀수와 짝의 합을 구하시오</h1>");
+            document.write("<h1>홀수와 짝수의 합을 구하시오</h1>");
 
             var num = 0,
                 sum = 0,
