--- a/011_javascript/while_array.html
+++ b/011_javascript/while_array.html
@@ -13,12 +13,18 @@
                 i = 0,
                 sum = 0;
 
-            while (i < arr.length) {
+            // while (i < arr.length) {
+            //     document.write(arr[i] + "<br>");
+            //     sum += arr[i];
+            //     i++;
+            // }
+            // document.write("총 합 = " + sum);
+
+            for (var i = 0; i < arr.length; i++) {
                 document.write(arr[i] + "<br>");
                 sum += arr[i];
-                i++;
             }
-            document.write(sum);
+            document.write("총 합 = " + sum);
         </script>
     </body>
 </html>
