--- a/016_js_ex/dom-ex02.html
+++ b/016_js_ex/dom-ex02.html
@@ -4,10 +4,17 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Document</title>
+        <script src="dom-ex02.js"></script>
     </head>
     <body>
-        <article class="ex">
-            <h2></h2>
+        <article class="ex1">
+            <h2>DOM - TextNode 추가하기</h2>
+            <div class="txt"></div>
         </article>
+
+        <article class="ex2">
+            <h2>DOM - </h2>
+        </article>
+
     </body>
 </html>
