--- a/017_jQuery/index.html
+++ b/017_jQuery/index.html
@@ -7,7 +7,25 @@
 
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
         <script>
-            $(function() {}); // = $(document).ready(function() {});
+            $(function() {
+                $(".box").hide(); // $('선택자').메소드();
+
+                $("button:first").on("click", function() {
+                    $(".box").css({
+                        border: "1px solid #000",
+                        padding: "60px",
+                        fontSize: "5em"
+                    });
+                    $(".box").show(500); //block
+                });
+
+                $("button:last").on("mouseover", slideToggle);
+                $("button:last").on("mouseleave", slideToggle);
+
+                function slideToggle() {
+                    $(".box").slideToggle(500); //none
+                }
+            }); // = $(document).ready(function() {});
         </script>
     </head>
     <body>
