--- a/017_jQuery/base5.html
+++ b/017_jQuery/base5.html
@@ -34,6 +34,8 @@
         <img src="../016_DomContral/img/img-01.jpg" alt="">
         <img src="../016_DomContral/img/img-02.jpg" alt="">
         <img src="../016_DomContral/img/img-03.jpg" alt="">
+        <img src="../016_DomContral/img/img-02.jpg" alt="">
+        <img src="../016_DomContral/img/img-01.jpg" alt="">
     </div>
 
     <style>
