--- a/017_jQuery/basic9.html
+++ b/017_jQuery/basic9.html
@@ -23,7 +23,7 @@ $(window).on('scroll',function(){
             //console.log(con);
             $('div').eq(i).css({
                 opacity:1,
-                marginTop:100;
+                marginTop:100
             });
         }
     });
