--- a/017_jQuery/ajax_worklist/index.html
+++ b/017_jQuery/ajax_worklist/index.html
@@ -8,21 +8,35 @@
     <link rel="stylesheet" type="text/css" href="style.css">
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+
     <script src="common.js"></script>
 
 </head>
 
 <body>
 
-    <div class="loading">로딩중입니다.....</div>
     <section>
+
         <!--
-       <img src="../../img/img-01.jpg">
-       <img src="../../img/img-02.jpg">
-       <img src="../../img/img-03.jpg">
+        <figure>
+            <img src="">
+            <figcaption>쿠팡</figcaption>
+        </figure>
+        
+        <figure>
+            <img src="">
+            <figcaption>쿠팡</figcaption>
+        </figure>
+        
+        <figure>
+            <img src="">
+            <figcaption>쿠팡</figcaption>
+        </figure>
 -->
+
+
+
     </section>
-    <button>더보기</button>
 
 
 
