--- a/017_jQuery/load/header.html
+++ b/017_jQuery/load/header.html
@@ -1,5 +1,13 @@
 <nav>
-    <a href="index.html">HOME</a>
-    <a href="sub01.html">sub01</a>
-    <a href="sub02.html">sub02</a>
+	<a href="index2.html">HOME</a>
+	<a href="sub01.html">sub01</a>
+	<a href="sub02.html">sub02</a>
 </nav>
+
+
+
+
+
+<div class="foot">
+	copyright @ 2020 green
+</div>
