--- a/017_jQuery/load/index.html
+++ b/017_jQuery/load/index.html
@@ -1,25 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-    <link rel="stylesheet" href="style.css">
-
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-
-    <script src="common.js"></script>
+	<meta charset="UTF-8">
+	<title>Document</title>
+	
+	<link src="">
+	
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+	
+	<script src="common.js"></script>
 </head>
-
 <body>
-    <header></header>
-
-    <section>
-        메인 콘텐츠
-    </section>
-
-    <footer></footer>
+	
+	<header></header>
+	
+	<section>메인 콘텐츠</section>
+	
+	<footer>하단 풋터</footer>
+	
 </body>
-
 </html>
