--- a/020_svg활용/mask.html
+++ b/020_svg활용/mask.html
@@ -20,19 +20,19 @@
     <style>
         img {
             clip-path: polygon(75% 0%, 100% 50%, 75% 100%, 0% 100%, 25% 50%, 0% 0%);
-            transform: translateX(0);
+            transform: translateY(0);
             animation: a 2s infinite;
         }
 
         @keyframes a {
             50% {
                 clip-path: polygon(75% 0%, 100% 50%, 75% 100%, 63% 100%, 89% 49%, 62% 0);
-                transform: translateX(100%);
+                transform: translateY(100%);
             }
 
             100% {
                 clip-path: polygon(75% 0%, 100% 50%, 75% 100%, 0% 100%, 25% 50%, 0% 0%);
-                transform: translateX(0);
+                transform: translateY(0);
             }
 
         }
